# surropt

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.conda/: meta.yaml
src/surropt/caballero/: __init__.py  problem.py
src/surropt/core/nlp/: __init__.py
src/surropt/core/options/: __init__.py  nlp.py
src/surropt/core/procedures/: __init__.py  output.py
src/surropt/core/utils/: __init__.py
src/surropt/optimizers/: __init__.py
src/surropt/utils/: matrixdivide.py  models.py
surropt/caballero/: __init__.py  problem.py
surropt/optimizers/: __init__.py
surropt/optimizers/sqp/: __init__.py
surropt/optimizers/utils/: __init__.py
surropt/utils/: __init__.py  matrixdivide.py
tests_/: __init__.py
tests_/caballero/: caballero_test.py
tests_/models/: evaporator_model.py
tests_/optimizers/: hs071_testvars.mat  ipopt_test.py  qp_test.m  qp_test.py  qp_test_matlab.m  sqp_test.py  sqp_test_matlab.asv  sqp_test_matlab.m  sqp_test_octave.m
tests_/resources/: column33pts.mat  evap5k.csv  evap5k.mat
tests_/resources/ipopt_server/: ipopt_server.yaml  server.py
tests_/surropt/caballero/: test_caballero.py  test_column.py  test_evap.py  test_hypercube.py
tests_/surropt/core/: test_utils.py
tests_/surropt/models/: test_model.py
tests_/utils/: distribute_data_test.py
