[tool.poetry]
name = "surropt"
version = "0.0.12"
description = "Surrogate optimization toolbox for time consuming models"
authors = ["Felipe Souza Lima <feslima93@gmail.com>"]
license = "Apache-2.0"
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
repository = "https://github.com/feslima/surropt"
packages = [{ include = "surropt", from = "src" }]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[tool.poetry.dependencies]
python = "^3.5"
numpy = "^1.15.0"
scipy = "^1.2.0"
pydoe2 = "^1.2.1"
pydace = "^0.1.3"
requests = "^2.20.1"
colorama = "^0.4.1"

[tool.poetry.dev-dependencies]
autopep8 = "^"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
